--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
      for Small Businesses
     </h1>
     <p class="text-lg md:text-xl text-gray-300 max-w-2xl mx-auto mb-10">
-     Empowering small businesses to streamline daily operations, automate repetitive processes, and enhance customer engagement through intelligent automation, conversational chatbots, and tailor-made AI solutions designed to drive growth and efficiency.
+     Empowering -> small businesses to streamline daily operations, automate repetitive processes, and enhance customer engagement through intelligent automation, conversational chatbots, and tailor-made AI solutions designed to drive growth and efficiency.
     </p>
     <a class="inline-block bg-cyan-500 text-gray-900 font-semibold py-3 px-8 rounded-full shadow-lg hover:bg-cyan-400 transition transform hover:scale-105" href="#contact">
      Let’s Work Together
