--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
        <a class="block px-4 py-2 hover:bg-gray-700 hover:text-cyan-400" href="#help">
         How I Help
        </a>
+	   <!-- Blogs -->
+       <a class="block px-4 py-2 hover:bg-gray-700 hover:text-cyan-400" href="/posts/blogs.html">
+       Blogs
+       </a>
       </div>
      </div>
      <!-- Solutions Dropdown -->
@@ -113,6 +117,7 @@
        </a>
       </div>
      </div>
+	 
      <!-- Contact Dropdown -->
      <div class="dropdown relative">
       <a class="hover:text-cyan-400 focus:text-cyan-400 transition" href="#contact">
@@ -1077,6 +1082,10 @@
       FAQs
      </a>
      |
+	 <a class="text-cyan-400 hover:underline" href="/posts/blogs.html">
+       Blogs
+     </a>
+	 | 
      <a class="text-cyan-400 hover:underline" href="privacy-policy.html">
       Privacy Policy
      </a>
