--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         How I Help
        </a>
 	   <!-- Blogs -->
-       <a class="block px-4 py-2 hover:bg-gray-700 hover:text-cyan-400" href="/posts/blogs.html">
+       <a class="block px-4 py-2 hover:bg-gray-700 hover:text-cyan-400" href="/posts/blog.html">
        Blogs
        </a>
       </div>
@@ -1082,7 +1082,7 @@
       FAQs
      </a>
      |
-	 <a class="text-cyan-400 hover:underline" href="/posts/blogs.html">
+	 <a class="text-cyan-400 hover:underline" href="/posts/blog.html">
        Blogs
      </a>
 	 | 
