--- a/enquiry.html
+++ b/enquiry.html
@@ -57,6 +57,7 @@
             <a href="index.html#about" class="block px-4 py-2 hover:bg-gray-700 hover:text-cyan-400">About Me</a>
             <a href="index.html#how" class="block px-4 py-2 hover:bg-gray-700 hover:text-cyan-400">How Do We Do</a>
             <a href="index.html#help" class="block px-4 py-2 hover:bg-gray-700 hover:text-cyan-400">How I Help</a>
+			<a href="/posts/blog.html" class="block px-4 py-2 hover:bg-gray-700 hover:text-cyan-400">Blogs</a>
           </div>
         </div>
 
@@ -135,6 +136,7 @@
     <div class="text-lg text-gray-300 mb-4">
       <p align="center">
 	    <a class="text-cyan-400 hover:underline" href="faq.html">FAQs</a> |
+		<a class="text-cyan-400 hover:underline" href="/posts/blog.html">Blogs</a> | 
         <a href="privacy-policy.html" class="text-cyan-400 hover:underline">Privacy Policy</a> |
         <a href="terms-of-service.html" class="text-cyan-400 hover:underline">Terms of Service</a>
       </p>
