--- a/index.html
+++ b/index.html
@@ -10,6 +10,33 @@
   <meta content="AI Freelancer helping small businesses streamline processes with AI-driven automation, chatbots, and workflow solutions." name="description"/>
   <meta content="AI Freelancer, AI Partner, Small Business Automation, Chatbots, Workflow Automation, AI Solutions" name="keywords"/>
   <meta content="Shekhar D" name="author"/>
+  <script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "Organization",
+	  "name": "AI Freelancer",
+	  "url": "https://ai-freelancer.netlify.app/",
+	  "logo": "https://ai-freelancer.netlify.app/images/ai-implementer-logo.jpg",
+	  "sameAs": [
+		"https://www.linkedin.com/",
+		"https://twitter.com/",
+		"https://github.com/"
+	  ],
+	  "description": "AI Freelancer helps small businesses implement practical, low-cost AI automation solutions — from customer support to workflow optimization.",
+	  "founder": {
+		"@type": "Person",
+		"name": "AI Freelancer Team"
+	  },
+	  "contactPoint": {
+		"@type": "ContactPoint",
+		"contactType": "Customer Support",
+		"email": "contact@ai-freelancer.netlify.app",
+		"availableLanguage": ["English"]
+	  }
+	}
+  </script>
+
+
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com">
   </script>
