--- a/faq.html
+++ b/faq.html
@@ -9,6 +9,68 @@
   <meta content="AI Freelancer helping small businesses streamline processes with AI-driven automation, chatbots, and workflow solutions." name="description"/>
   <meta content="AI Freelancer, AI Partner, Small Business Automation, Chatbots, Workflow Automation, AI Solutions, FAQ" name="keywords"/>
   <meta content="Shekhar D" name="author">
+  
+  <!-- Organization Schema -->
+  <script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "Organization",
+	  "name": "AI Freelancer",
+	  "url": "https://ai-freelancer.netlify.app/",
+	  "logo": "https://ai-freelancer.netlify.app/images/ai-implementer-logo.jpg",
+	  "description": "AI Freelancer helps small businesses implement low-cost AI automation solutions to save time and improve operations.",
+	  "contactPoint": {
+		"@type": "ContactPoint",
+		"contactType": "Customer Support",
+		"email": "ai.implementer@gmail.com",
+		"availableLanguage": ["English"]
+	  }
+	}
+	</script>
+
+	<!-- FAQ Schema -->
+	<script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "FAQPage",
+	  "mainEntity": [
+		{
+		  "@type": "Question",
+		  "name": "What does AI Freelancer do?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "AI Freelancer helps small businesses automate workflows, customer support, and marketing using low-cost AI tools and integrations."
+		  }
+		},
+		{
+		  "@type": "Question",
+		  "name": "Who can benefit from AI automation?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "Small and medium-sized businesses that want to save time, reduce manual work, and scale efficiently using AI automation solutions."
+		  }
+		},
+		{
+		  "@type": "Question",
+		  "name": "Do I need technical knowledge to use AI automation?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "No technical background is required. AI Freelancer provides done-for-you automation setup and guidance for easy adoption."
+		  }
+		},
+		{
+		  "@type": "Question",
+		  "name": "How can I contact AI Freelancer?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "You can contact us directly via email at ai.implementer@gmail.com for any inquiries or support requests."
+		  }
+		}
+	  ]
+	}
+	</script>
+
+  
    <script src="https://cdn.tailwindcss.com">
    </script>
    <script src="https://unpkg.com/lucide@latest">
