--- a/index.html
+++ b/index.html
@@ -10,31 +10,57 @@
   <meta content="AI Freelancer helping small businesses streamline processes with AI-driven automation, chatbots, and workflow solutions." name="description"/>
   <meta content="AI Freelancer, AI Partner, Small Business Automation, Chatbots, Workflow Automation, AI Solutions" name="keywords"/>
   <meta content="Shekhar D" name="author"/>
+  
+  <!-- ✅ Structured Data for SEO -->
   <script type="application/ld+json">
 	{
 	  "@context": "https://schema.org",
-	  "@type": "Organization",
-	  "name": "AI Freelancer",
-	  "url": "https://ai-freelancer.netlify.app/",
-	  "logo": "https://ai-freelancer.netlify.app/images/ai-implementer-logo.jpg",
-	  "sameAs": [
-		"https://www.linkedin.com/",
-		"https://twitter.com/",
-		"https://github.com/"
-	  ],
-	  "description": "AI Freelancer helps small businesses implement practical, low-cost AI automation solutions — from customer support to workflow optimization.",
-	  "founder": {
-		"@type": "Person",
-		"name": "AI Freelancer Team"
-	  },
-	  "contactPoint": {
-		"@type": "ContactPoint",
-		"contactType": "Customer Support",
-		"email": "contact@ai-freelancer.netlify.app",
-		"availableLanguage": ["English"]
-	  }
+	  "@graph": [
+		{
+		  "@type": "WebSite",
+		  "@id": "https://ai-freelancer.netlify.app/#website",
+		  "url": "https://ai-freelancer.netlify.app/",
+		  "name": "AI Freelancer",
+		  "description": "AI Freelancer helps small businesses automate workflows, customer support, and daily operations with low-cost AI solutions.",
+		  "publisher": {
+			"@id": "https://ai-freelancer.netlify.app/#organization"
+		  },
+		  "potentialAction": {
+			"@type": "SearchAction",
+			"target": "https://ai-freelancer.netlify.app/?s={search_term_string}",
+			"query-input": "required name=search_term_string"
+		  }
+		},
+		{
+		  "@type": "Organization",
+		  "@id": "https://ai-freelancer.netlify.app/#organization",
+		  "name": "AI Freelancer",
+		  "url": "https://ai-freelancer.netlify.app/",
+		  "logo": "https://ai-freelancer.netlify.app/images/ai-implementer-logo.jpg",
+		  "sameAs": [
+			"https://www.linkedin.com/company/ai-implementer/",
+			"https://x.com/ai-implementer"
+		  ],
+		  "contactPoint": {
+			"@type": "ContactPoint",
+			"email": "ai.implementer@gmail.com",
+			"contactType": "Customer Support",
+			"availableLanguage": "English"
+		  }
+		},
+		{
+		  "@type": "LocalBusiness",
+		  "@id": "https://ai-freelancer.netlify.app/#localbusiness",
+		  "name": "AI Freelancer",
+		  "image": "https://ai-freelancer.netlify.app/images/ai-implementer-logo.jpg",
+		  "url": "https://ai-freelancer.netlify.app/",
+		  "email": "ai.implementer@gmail.com",
+		  "priceRange": "$",
+		  "description": "AI Freelancer provides affordable AI automation services for small businesses — from workflow automation to customer support bots."
+		}
+	  ]
 	}
-  </script>
+	</script>
 
 
   <!-- Tailwind CSS -->
