--- a/faq.html
+++ b/faq.html
@@ -7,6 +7,7 @@
    FAQ | AI Freelancer for Small Business Solutions
   </title>
   <meta content="AI Freelancer helping small businesses streamline processes with AI-driven automation, chatbots, and workflow solutions." name="description"/>
+  <meta name="robots" content="index, follow">
   <meta content="AI Freelancer, AI Partner, Small Business Automation, Chatbots, Workflow Automation, AI Solutions, FAQ" name="keywords"/>
   <meta content="Shekhar D" name="author">
   
