--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
   </title>
   <!-- SEO -->
   <meta content="AI Freelancer helping small businesses streamline processes with AI-driven automation, chatbots, and workflow solutions." name="description"/>
+    
+  <!-- -->
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://ai-freelancer.netlify.app/">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="AI Freelancer | AI Automation Partner for Small Businesses">
+    <meta property="og:description" content="Helping small businesses streamline operations with AI-driven workflow automation, chatbots, and analytics.">
+    <meta property="og:url" content="https://ai-freelancer.netlify.app/">
+    <meta property="og:image" content="https://ai-freelancer.netlify.app/images/ai-implementer-logo.jpg">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="AI Freelancer">
+    <meta property="og:locale" content="en_US">
+
+	<!-- Twitter -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="AI Freelancer | AI Automation Partner for Small Businesses">
+	<meta name="twitter:description" content="Low-cost AI automation and workflow optimization solutions for small businesses.">
+	<meta name="twitter:image" content="https://ai-freelancer.netlify.app/images/ai-implementer-logo.jpg">
+ <!-- -->
+  
   <meta content="AI Freelancer, AI Partner, Small Business Automation, Chatbots, Workflow Automation, AI Solutions" name="keywords"/>
   <meta content="Shekhar D" name="author"/>
 
@@ -71,7 +92,7 @@
 		  },
 		  "address": {
 			"@type": "PostalAddress",
-			"addressCountry": "India"
+			"addressCountry": ""
 		  },
 		  "hasOfferCatalog": {
 			"@type": "OfferCatalog",
