--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
  <head>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>
-   AI Freelancer | Partner for Small Businesses
-  </title>
+  <title>AI Freelancer | Affordable AI Automation & Chatbot Solutions for Small Businesses</title>
+  
   <!-- SEO -->
   <meta content="AI Freelancer helping small businesses streamline processes with AI-driven automation, chatbots, and workflow solutions." name="description"/>
     
   <!-- -->
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+	<meta name="theme-color" content="#0f172a">
     <link rel="canonical" href="https://ai-freelancer.netlify.app/">
+	<link rel="alternate" href="https://ai-freelancer.netlify.app/" hreflang="en">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <!-- Open Graph -->
     <meta property="og:title" content="AI Freelancer | AI Automation Partner for Small Businesses">
@@ -76,6 +79,25 @@
 			}
 		  ]
 		},
+		{
+			"@type": "LocalBusiness",
+			"@id": "https://ai-freelancer.netlify.app/#localbusiness",
+			"name": "AI Freelancer",
+			"image": "https://ai-freelancer.netlify.app/images/ai-implementer-logo.jpg",
+			"description": "Providing AI solutions and workflow automation for small businesses.",
+			"priceRange": "$",
+			"telephone": "+918087558460",
+			"email": "ai.implementer@gmail.com",
+			"url": "https://ai-freelancer.netlify.app/"
+		  },
+		  {
+			"@type": "BreadcrumbList",
+			"itemListElement": [
+			  {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://ai-freelancer.netlify.app/"},
+			  {"@type": "ListItem", "position": 2, "name": "Services", "item": "https://ai-freelancer.netlify.app/#services"},
+			  {"@type": "ListItem", "position": 3, "name": "Contact", "item": "https://ai-freelancer.netlify.app/#contact"}
+			]
+		  },
 		{
 		  "@type": "ProfessionalService",
 		  "@id": "https://ai-freelancer.netlify.app/#business",
