--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>AI Freelancer | Affordable AI Automation & Chatbot Solutions for Small Businesses</title>
   
   <!-- SEO -->
-  <meta content="AI Freelancer helping small businesses streamline processes with AI-driven automation, chatbots, and workflow solutions." name="description"/>
-    
+  <meta content="AI Freelancer helping small businesses streamline processes with AI-driven automation, chatbots, and workflow solutions." name="description"/>    
+  
   <!-- -->
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 	<meta name="theme-color" content="#0f172a">
@@ -30,7 +30,13 @@
 	<meta name="twitter:title" content="AI Freelancer | AI Automation Partner for Small Businesses">
 	<meta name="twitter:description" content="Low-cost AI automation and workflow optimization solutions for small businesses.">
 	<meta name="twitter:image" content="https://ai-freelancer.netlify.app/images/ai-implementer-logo.jpg">
- <!-- -->
+    <!-- -->
+	
+	<!-- Preload critical resources -->
+	<link rel="preload" href="https://cdn.tailwindcss.com" as="script">
+	<link rel="preload" href="https://unpkg.com/lucide@latest" as="script">
+	<link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" as="style">
+	<link rel="preload" href="images/ai-implementer-logo.jpg" as="image">
   
   <meta content="AI Freelancer, AI Partner, Small Business Automation, Chatbots, Workflow Automation, AI Solutions" name="keywords"/>
   <meta content="Shekhar D" name="author"/>
