--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
   <meta content="AI Freelancer helping small businesses streamline processes with AI-driven automation, chatbots, and workflow solutions." name="description"/>    
   
   <!-- -->
+    <meta charset="utf-8">
+	<meta name="language" content="en">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 	<meta name="theme-color" content="#0f172a">
+	
+	
     <link rel="canonical" href="https://ai-freelancer.netlify.app/">
 	<link rel="alternate" href="https://ai-freelancer.netlify.app/" hreflang="en">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,7 +42,7 @@
 	<link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" as="style">
 	<link rel="preload" href="images/ai-implementer-logo.jpg" as="image">
   
-  <meta content="AI Freelancer, AI Partner, Small Business Automation, Chatbots, Workflow Automation, AI Solutions" name="keywords"/>
+  <meta content="AI Freelancer, AI for Small Business, AI Partner, Small Business Automation, Chatbots, Workflow Automation, AI Solutions, AI Chatbot, AI Consultant, Small Business AI Solutions" name="keywords"/>
   <meta content="Shekhar D" name="author"/>
 
   <script type="application/ld+json">
