--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" as="style">
 	<link rel="preload" href="images/ai-implementer-logo.jpg" as="image">
   
-  
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="https://ai-freelancer.netlify.app/sitemap.xml">
   <meta content="Shekhar D" name="author"/>
 
   <script type="application/ld+json">
