--- a/faq.html
+++ b/faq.html
@@ -75,15 +75,52 @@
     <div class="max-w-7xl mx-auto flex justify-between items-center px-6 py-3">
       <div class="flex items-center space-x-3">
         <a href="index.html">
-          <img alt="AI Freelancer logo – AI Automation for Small Businesses" class="w-10 h-10 object-contain" src="images/ai-implementer-logo.jpg" />
+          <img alt="AI Implementer Logo" class="w-10 h-10 object-contain" src="images/ai-implementer-logo.jpg"/>
         </a>
         <h1 class="text-xl font-bold text-cyan-400">AI Freelancer</h1>
       </div>
       <div class="flex items-center space-x-6 text-sm font-medium">
         <a href="index.html" class="hover:text-cyan-400">Home</a>
-        <a href="/posts/blog.html" class="hover:text-cyan-400">Blogs</a>
-        <a href="enquiry.html" class="hover:text-cyan-400">Enquiry</a>
-        <a href="faq.html" class="text-cyan-400 font-semibold">FAQs</a>
+
+        <div class="dropdown relative">
+          <a href="#about" class="hover:text-cyan-400 focus:text-cyan-400 transition">About ▾</a>
+          <div class="dropdown-content absolute hidden bg-gray-800 mt-2 rounded-lg shadow-lg">
+            <a href="index.html#about" class="block px-4 py-2 hover:bg-gray-700 hover:text-cyan-400">About Me</a>
+            <a href="index.html#how" class="block px-4 py-2 hover:bg-gray-700 hover:text-cyan-400">How Do We Do</a>
+            <a href="index.html#help" class="block px-4 py-2 hover:bg-gray-700 hover:text-cyan-400">How I Help</a>
+			<a href="/posts/blog.html" class="block px-4 py-2 hover:bg-gray-700 hover:text-cyan-400">Blogs</a>
+          </div>
+        </div>
+
+        <div class="dropdown relative">
+          <a href="#solution" class="hover:text-cyan-400 focus:text-cyan-400 transition">AI Offerings ▾</a>
+          <div class="dropdown-content absolute hidden bg-gray-800 mt-2 rounded-lg shadow-lg">
+            <a href="index.html#services" class="block px-4 py-2 hover:bg-gray-700 hover:text-cyan-400">Services</a>
+			<a class="block px-4 py-2 hover:bg-gray-700 hover:text-cyan-400" href="index.html#solution">AI Solutions</a>
+            <a href="index.html#solutions-overview" class="block px-4 py-2 hover:bg-gray-700 hover:text-cyan-400">Solutions Overview</a>
+          </div>
+        </div>
+
+        <div class="dropdown relative">
+          <a href="#contact" class="hover:text-cyan-400 focus:text-cyan-400 transition">Contact ▾</a>
+          <div class="dropdown-content absolute hidden bg-gray-800 mt-2 rounded-lg shadow-lg">
+            <a href="faq.html" class="block px-4 py-2 hover:bg-gray-700 hover:text-cyan-400">FAQs</a>
+			<a class="block px-4 py-2 hover:bg-gray-700 hover:text-cyan-400" href="enquiry.html">Send Enquiry</a>
+            <a href="index.html#contact" class="block px-4 py-2 hover:bg-gray-700 hover:text-cyan-400">Get in Touch</a>
+          </div>
+        </div>
+
+        <!-- Social Icons Starts-->	 
+		 <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
+
+		 <div class="flex space-x-2 text-cyan-400 text-2xl">
+		  <a alt="LinkedIn" title="Linked In" href="https://www.linkedin.com/company/ai-implementer/?viewAsMember=true" target="_blank" ><i class="ri-linkedin-box-line hover:text-cyan-300"></i></a>
+		  
+		  <a alt="Facebook" title="Facebook" href="https://www.facebook.com/profile.php?id=61581913815232" target="_blank"><i class="ri-facebook-circle-line hover:text-cyan-300"></i></a>
+		  
+		  <a alt="Instagram" title="Instagram" href="https://www.instagram.com/ai.implementer/" target="_blank"><i class="ri-instagram-line hover:text-cyan-300"></i></a>
+		 </div>
+		<!-- Social Icons Ends -->
       </div>
     </div>
   </nav>
