--- a/faq.html
+++ b/faq.html
@@ -199,7 +199,55 @@
       item.querySelector('.answer').innerHTML = a;
       container.appendChild(item);
     });
+	
+	<!-- menu links-->
+	document.addEventListener('DOMContentLoaded', function() {
+      const dropdowns = document.querySelectorAll('.dropdown');
+      dropdowns.forEach(dropdown => {
+        const trigger = dropdown.querySelector('a');
+        trigger.addEventListener('click', function(e) {
+          e.preventDefault();
+          const isActive = dropdown.classList.contains('active');
+          dropdowns.forEach(d => d.classList.remove('active'));
+          if (!isActive) dropdown.classList.add('active');
+        });
+      });
+      document.addEventListener('click', function(e) {
+        if (![...dropdowns].some(d => d.contains(e.target))) {
+          dropdowns.forEach(d => d.classList.remove('active'));
+        }
+      });
+    });
+
+    document.getElementById('enquiryForm').addEventListener('submit', async function(e) {
+      e.preventDefault();
+      const data = {
+        name: document.getElementById('name').value,
+        email: document.getElementById('email').value,
+        enquiry: document.getElementById('enquiry').value
+      };
+      const responseMessage = document.getElementById('responseMessage');
+      try {
+        await fetch('https://script.google.com/macros/s/AKfycbz4hkSWYzCvtXxxhavkb5R25TGkb7mf6-8KoaIOxrGA44C0Gc8VM_sj0c0yciJ2QwtqIg/exec', {
+          method: 'POST',
+          mode: 'no-cors',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(data)
+        });
+        responseMessage.classList.remove('hidden');
+        document.getElementById('enquiryForm').reset();
+      } catch (error) {
+        responseMessage.textContent = '⚠️ Something went wrong. Please try again.';
+        responseMessage.classList.remove('hidden');
+        responseMessage.classList.remove('text-green-400');
+        responseMessage.classList.add('text-red-400');
+      }
+    });
+	<!-- -->
+	
   </script>
+  
+  
 
 </body>
 </html>
