--- a/faq.html
+++ b/faq.html
@@ -49,21 +49,30 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
 
   <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background-color: #0f172a;
-      color: #e2e8f0;
-    }
+    body { font-family: 'Inter', sans-serif; background-color: #0f172a; color: #e2e8f0; }
     html { scroll-behavior: smooth; }
-    details summary::-webkit-details-marker { display: none; }
-    details[open] summary svg { transform: rotate(180deg); }
-    summary {
-      list-style: none;
-      outline: none;
+    .dropdown { position: relative; }
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      background-color: #1e293b;
+      min-width: 180px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+      border-radius: 0.5rem;
+      z-index: 20;
     }
-    summary:focus {
-      outline: 2px solid #22d3ee;
-      border-radius: 8px;
+    .dropdown.active .dropdown-content { display: block !important; }
+    .dropdown-content a {
+      display: block;
+      padding: 0.75rem 1rem;
+      color: #e2e8f0;
+      text-decoration: none;
+    }
+    .dropdown-content a:hover {
+      background-color: #0f172a;
+      color: #22d3ee;
     }
   </style>
 </head>
