--- a/faq.html
+++ b/faq.html
@@ -43,6 +43,145 @@
     ]
   }
   </script>
+  
+  <!-- FAQPage Schema -->
+  <script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "FAQPage",
+	  "mainEntity": [
+		{
+		  "@type": "Question",
+		  "name": "What does an AI freelancer do for small businesses?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "An AI freelancer helps small businesses automate repetitive tasks, enhance customer engagement, and optimize workflows using AI-powered tools tailored to their goals."
+		  }
+		},
+		{
+		  "@type": "Question",
+		  "name": "How can AI help my small business grow?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "AI improves efficiency, reduces costs, and provides data-driven insights. It can automate emails, generate content, analyze performance, and assist in decision-making."
+		  }
+		},
+		{
+		  "@type": "Question",
+		  "name": "What types of AI solutions do you offer?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "AI Chatbots, WhatsApp & Email Automation, Workflow Automation, CRM & Lead Management, and Analytics Dashboards."
+		  }
+		},
+		{
+		  "@type": "Question",
+		  "name": "Can AI help with marketing and social media?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "Yes. AI can generate LinkedIn and Instagram posts, suggest hashtags and captions, schedule posts automatically, and analyze engagement metrics."
+		  }
+		},
+		{
+		  "@type": "Question",
+		  "name": "Do I need technical skills to use these?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "No technical skills are required. I handle all setup and integration using easy, user-friendly tools."
+		  }
+		},
+		{
+		  "@type": "Question",
+		  "name": "How long does it take to implement?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "Implementation depends on project complexity. Simple automations take 3–5 days, while advanced setups may take 2–4 weeks."
+		  }
+		},
+		{
+		  "@type": "Question",
+		  "name": "What’s the cost for AI implementation?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "Basic AI automations start around ₹25,000 ($300) and advanced AI setups from ₹50,000 ($570). Pricing depends on your automation scope."
+		  }
+		},
+		{
+		  "@type": "Question",
+		  "name": "Will AI work with my current tools?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "Yes. AI integrates with Google Workspace, WhatsApp Business API, Zoho, HubSpot, and most CRMs or marketing tools."
+		  }
+		},
+		{
+		  "@type": "Question",
+		  "name": "What’s your process for delivering AI solutions?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "1. Discovery Call  2. Proposal & Plan  3. Implementation  4. Training & Support."
+		  }
+		},
+		{
+		  "@type": "Question",
+		  "name": "Is my data secure?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "Yes. All integrations use secure APIs and encryption to ensure full data privacy and confidentiality."
+		  }
+		},
+		{
+		  "@type": "Question",
+		  "name": "Do you provide training and support?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "Yes. I provide detailed documentation, personalized training, and post-implementation support for your team."
+		  }
+		},
+		{
+		  "@type": "Question",
+		  "name": "How can I get started?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "You can book a free consultation via email or WhatsApp to discuss your business automation goals."
+		  }
+		},
+		{
+		  "@type": "Question",
+		  "name": "Can you show a demo?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "Yes, I can provide live demos of WhatsApp or email automation workflows before starting your project."
+		  }
+		},
+		{
+		  "@type": "Question",
+		  "name": "What industries benefit from AI?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "AI helps service businesses, agencies, healthcare, real estate, education, and retail sectors enhance efficiency."
+		  }
+		},
+		{
+		  "@type": "Question",
+		  "name": "How is hiring a freelancer different from an AI agency?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "Freelancers provide personalized service, lower costs, faster turnaround, and direct communication compared to agencies."
+		  }
+		},
+		{
+		  "@type": "Question",
+		  "name": "How can I contact AI Freelancer?",
+		  "acceptedAnswer": {
+			"@type": "Answer",
+			"text": "You can reach me via email at ai.implementer@gmail.com or through the Enquiry Page on the website."
+		  }
+		}
+	  ]
+	}
+  </script>
+
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/lucide@latest" defer></script>
