--- a/faq.html
+++ b/faq.html
@@ -182,6 +182,58 @@
 	}
   </script>
 
+  <!-- Site Navigation Schema -->
+  <script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "ItemList",
+	  "itemListElement": [
+		{
+		  "@type": "SiteNavigationElement",
+		  "position": 1,
+		  "name": "Home",
+		  "url": "https://ai-freelancer.netlify.app/index.html"
+		},
+		{
+		  "@type": "SiteNavigationElement",
+		  "position": 2,
+		  "name": "About",
+		  "url": "https://ai-freelancer.netlify.app/index.html#about"
+		},
+		{
+		  "@type": "SiteNavigationElement",
+		  "position": 3,
+		  "name": "AI Offerings",
+		  "url": "https://ai-freelancer.netlify.app/index.html#solution"
+		},
+		{
+		  "@type": "SiteNavigationElement",
+		  "position": 4,
+		  "name": "Blogs",
+		  "url": "https://ai-freelancer.netlify.app/posts/blog.html"
+		},
+		{
+		  "@type": "SiteNavigationElement",
+		  "position": 5,
+		  "name": "FAQs",
+		  "url": "https://ai-freelancer.netlify.app/faq.html"
+		},
+		{
+		  "@type": "SiteNavigationElement",
+		  "position": 6,
+		  "name": "Enquiry",
+		  "url": "https://ai-freelancer.netlify.app/enquiry.html"
+		},
+		{
+		  "@type": "SiteNavigationElement",
+		  "position": 7,
+		  "name": "Contact",
+		  "url": "https://ai-freelancer.netlify.app/index.html#contact"
+		}
+	  ]
+	}
+  </script>
+
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/lucide@latest" defer></script>
